{{$NEXT}}

0.46     2016-04-17

- Fix a use line which specified the required version of Text::Diff as
  "v1.44". This caused weirdness to cascade in the Makefile.PL. Reported by
  Olaf Alders. GitHub #60.


0.45     2016-04-11

- Some changes intended to be internal-only in the last release broke the
  handling of ignore and select config lines with multiple space-separated
  values. This should now work again (and is tested). Reported by Martin
  Gruner. GitHub #44.


0.44     2016-04-10

- Changed the shebang config item to actually accept multi items on different
  lines. The old method of specifying more than one item on a single line,
  separated by spaces, will continue to work, but is no longer documented.


0.43     2016-03-27

- Use the same improved "git status" code for Code::TidyAll::Git::Precommit as
  we do in bin/tidyall for the -g option. Patch by Finn Smith. GitHub #57.


0.42     2016-03-10

- Specify Text::Diff version as 'v1.44' instead of '1.44'. This fixes an
  inexplicable error that the OTRS project was having with the previous
  release (GitHub #53). Fixed by Martin Gruner. GitHub #54.


0.41     2016-03-04

- Replaced List::MoreUtils with List::SomeUtils.


0.40     2016-02-21

- Don't include files not tracked by git when looking for uncommitted files.
  Fixed by Olaf Alders. GitHub #51.

- Use Text::Diff for all diffs instead of calling an external
  command. Hopefully this makes this distro a little more portable.


0.39     2016-02-13

- Use "git status --porcelain -z" when trying to figure out what files are
  being uncommitted for git hooks. Implemented by Ricardo Signes. GitHub #40.


0.38     2016-01-11

- Tweaked the test names used by Test::Code::TidyAll so that they say
  something like "lib/Foo.pm is tidy" rather than just "lib/Foo.pm".


0.37     2015-12-03

- Really fix an empty files parameter to tidyall_ok (Test::Code::TidyAll
  desperately needs some tests).


0.36     2015-12-02
